--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.3.0
   skeletonizer: ^1.4.3
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
